# edupredict

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
apps/backend/: .env.example  Dockerfile  README.md  README_DEPLOY.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260101_0001_init_auth_tables.py  20260101_0002_academic_records.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/core/: db.py  security.py  settings.py
apps/backend/app/ml/: __init__.py  cli_train.py  dataset.py  explain.py  features.py  humanize.py  inference.py  metrics.py  model.py  preprocess.py  registry.py  train.py
apps/backend/app/models/: __init__.py  academic_record.py  refresh_token.py  user.py
apps/backend/app/routers/: __init__.py  academics.py  admin.py  auth.py  bootstrap.py  health.py  ml.py  users.py
apps/backend/app/schemas/: __init__.py  academic.py  admin.py  auth.py  ml.py  user.py
apps/backend/app/services/: __init__.py  academics.py  admin_bootstrap.py  auth.py  users.py
apps/backend/data/demo_ruet_cse/: course_marks_ruet_cse_50x8.csv  edupredict_academic_import_ruet_cse_50x8.csv  predictions_ruet_cse_50x8.csv  (+1 more)
apps/backend/scripts/: generate_ruet_demo_data.py  reset_admin_password.py
apps/backend/tests/: conftest.py  test_academics_access.py  test_academics_import.py  test_admin_users.py  test_auth_flow.py  test_health.py  test_ml_endpoints.py  test_ml_model_versions.py  test_ml_pipeline.py  test_ml_train_endpoint.py  test_rbac_admin.py  test_users_list.py
(+48 files in other folders)
